tests/NormalTests/paczka1/small_fuzzy/76359139.err
Error in line 5: pwx A735 4,1
Error in line 13: pwx A254 10,1
